refactor: 정산 내역 조회를 쿼리dsl로 변경